static/css/custom.css
html {
    overflow-y: scroll;
}

/* Headings */

h1.title {
    font-family: 'Merriweather', serif;
    font-weight: 100;
    letter-spacing: 1.25px;
    color: #6D6DE1;
}

h2 {
    color: #2f2f2f;
    font-size: 2.4rem; 
    line-height: 1.35; 
    letter-spacing: -.08rem;
    border-bottom: 1px solid #E1E1E1;
    font-weight: bold;
}

h3.sidebar {
    font-size: 1.5rem;
    line-height: 1.6;
    letter-spacing: 0;
    color: #2f2f2f;
    margin-bottom: 1rem;
}

/* Posts */

a {
    color: #6D6DE1;
    text-decoration: none;
}

figure {
    margin: 0;
}

div.post_nav {
    overflow: auto;
}

img {
    max-width: 100%;
    height: auto;
}

blockquote {
    color: #717171;
}

ul {
    list-style: disc inside;
}

/* Sidebar */

ul.sidebar {
    list-style: none;
}

/* Archive */

.archive-line {
    margin-bottom: 0;
}

/* Nav */

nav {
    position: relative;
    width: 100%;
    margin: 0 auto;
    padding: 0;
    text-align: center;
    overflow: auto;
    border-bottom: 1px solid #E1E1E1;
}

nav ul {
    margin: 0;
}

nav li {
    list-style: none;
    float: left;
    width: 33%;
    margin: 0;
}

nav li a {
    display: block;
    text-decoration: none;
    text-align: center;
    padding: 15px;
    color: #ffffff;
    font-weight: bold;
    text-transform: uppercase;
    background-color: #6D6DE1;
} 

/* Media queries */

.title, .sidebar {
    display: none;
}

@media (min-width: 550px) {
    nav, .navbar-spacer {
        display: none;
    }

    .sidebar, .title {
        display: block;
    }
}

